      \code{svd(LINPACK = TRUE)} are deprecated and give a warning.

      They were provided for compatibility with \R 1.7.0 (Mar 2003)!
      
      \item The \sQuote{internal function} \code{kappa.tri()} has been
      renamed to \code{.kappa_tri()} so it is not inadvertently called
      as a method for class \code{"tri"}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item For a Windows or Mac OS X binary package install,
      \code{install.packages()} will check if a source package is
      available on the same repositories, and report if it is a later
      version or there is a source package but no binary package
      available.

      This check can be suppressed: see the help page.

      \item \code{install.packages(type = "both")} has been enhanced.
      In interactive use it will ask whether to choose the source
      version of a package if the binary version is older and contains
      compiled code, and also asks if source packages with no binary
      version should be installed).
    }
  }

  \subsection{INSTALLATION}{
     \itemize{
      \item There is a new \command{configure} option
      \option{--with-libtiff} (mainly in case the system installation
      needs to be avoided).
      
      \item LAPACK 3.4.1 does use some Fortran 90 features, so
      \command{g77} no longer suffices.
      
      \item If an external LAPACK is used, it must be version 3.2 or later.
    }
 }
    
  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, starting \command{Rterm} via \command{R.exe}
      caused Ctrl-C to misbehave.  (\PR{14948})

      \item The \code{tools::latexToUtf8()} function missed conversions that
      were contained within braces.

      \item Long timezone specifications (such as a file name preceded
      by \code{:}) could crash \code{as.POSIXlt}.  (\PR{14945})

      \item \code{R CMD build --resave-data} could fail if there was no